[package]
edition = "2021"
name = "kvadrat74_html-parser"
version = "0.0.1"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.12.2", default-features = false, features = ["napi4", "serde-json"] }
napi-derive = "2.12.2"
serde_json = "1.0"
num_cpus = "1.14.0"
crossbeam-channel = "0.5.0"
scraper = "0.12.0"
kuchiki = "0.8.1"
regex = "1.5"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
